// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddUpdateRadioStationForm > matches the snapshot 1`] = `
"<form novalidate="">
  <div class="formFields">
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label" for="name">name <span class="required">*</span></label><input id="name" autocomplete="off" class="input" placeholder="Enter radio station name" required="" type="text">
      <!--v-if-->
    </div>
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label" for="streamUrl">stream Url <span class="required">*</span></label><input id="streamUrl" autocomplete="off" class="input" placeholder="Enter radio station stream URL" required="" type="text">
      <!--v-if-->
    </div>
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label" for="homepageUrl">homepage Url
        <!--v-if-->
      </label><input id="homepageUrl" autocomplete="off" class="input" placeholder="Enter radio station homepage URL" type="text">
      <!--v-if-->
    </div>
  </div><button class="centerItems buttonLink submitButton formButton submitButton formButton" type="submit">
    <!--v-if--><span class="clamp text">Add radio station </span>
  </button>
</form>"
`;

exports[`AddUpdateRadioStationForm > when form is valid > matches the snapshot 1`] = `
"<form novalidate="">
  <div class="formFields">
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label" for="name">name <span class="required">*</span></label><input id="name" autocomplete="off" class="input" placeholder="Enter radio station name" required="" type="text">
      <!--v-if-->
    </div>
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label" for="streamUrl">stream Url <span class="required">*</span></label><input id="streamUrl" autocomplete="off" class="input" placeholder="Enter radio station stream URL" required="" type="text">
      <!--v-if-->
    </div>
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label" for="homepageUrl">homepage Url
        <!--v-if-->
      </label><input id="homepageUrl" autocomplete="off" class="input" placeholder="Enter radio station homepage URL" type="text">
      <!--v-if-->
    </div>
  </div><button class="centerItems buttonLink alignRight disabled submitButton formButton submitButton formButton" type="submit" disabled=""><span class="centerItems spinningLoader icon" aria-hidden="true" weight="regular"><phcirclenotch class="icon" size="24"></phcirclenotch><span class="visuallyHidden">Loading...</span></span><span class="clamp text">Add radio station </span></button>
</form>"
`;

exports[`AddUpdateRadioStationForm > when radioStation prop is set > matches the snapshot 1`] = `
"<form novalidate="">
  <div class="formFields">
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label" for="name">name <span class="required">*</span></label><input id="name" autocomplete="off" class="input" placeholder="Enter radio station name" required="" type="text">
      <!--v-if-->
    </div>
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label" for="streamUrl">stream Url <span class="required">*</span></label><input id="streamUrl" autocomplete="off" class="input" placeholder="Enter radio station stream URL" required="" type="text">
      <!--v-if-->
    </div>
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label" for="homepageUrl">homepage Url
        <!--v-if-->
      </label><input id="homepageUrl" autocomplete="off" class="input" placeholder="Enter radio station homepage URL" type="text">
      <!--v-if-->
    </div>
  </div><button class="centerItems buttonLink submitButton formButton submitButton formButton" type="submit">
    <!--v-if--><span class="clamp text">Update radio station </span>
  </button>
</form>"
`;
